force-app/main/default/objects/Contractor_Skill__c/Contractor_Skill__c.object-meta.xml
<CustomObject>
    <description>Tracks skills per contractor for staffing and search capabilities</description>
    <label>Contractor Skill</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>