force-app/main/default/objects/Contractor_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <label>Skill Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Data Cloud</fullName>
            </value>
            <value>
                <fullName>Identity Resolution</fullName>
            </value>
            <value>
                <fullName>Calculated Insights</fullName>
            </value>
            <value>
                <fullName>Segmentation</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>AI Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>